--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,7 @@
     "scripts": [
       "stolen/js/background.js"
     ],
-    "persistent": false
+    "persistent": true
   },
   "permissions": [
     "tabs",
