--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "background": {
     "scripts": [
-      "stolen/js/background.js"
+      "js/game.js"
     ],
     "persistent": true
   },
