--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "background": {
     "scripts": [
+      "js/navigation.js",
       "js/game.js"
     ],
     "persistent": true
