--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -25,6 +25,10 @@
       "run_at": "document_start"
     }
   ],
+  "web_accessible_resources": [
+    "css/*",
+    "images/*"
+  ],
   "permissions": [
     "tabs",
     "webNavigation",
